fix: prevent filter popup from clipping on short results

--- a/src/pages/Users/Users.scss
+++ b/src/pages/Users/Users.scss
@@ -45,6 +45,7 @@
     position: relative;
     overflow: auto;
     width: 100%;
+    min-height: 650px;
     -webkit-overflow-scrolling: touch;
   }
 
